--- a/CRM-Dev.Infraestructure/CRM-Dev.Infraestructure.csproj
+++ b/CRM-Dev.Infraestructure/CRM-Dev.Infraestructure.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CRM-Dev.Core\CRM-Dev.Core.csproj" />
+  </ItemGroup>
+
 </Project>
