--- a/CRM-Dev.Infraestructure/CRM-Dev.Infraestructure.csproj
+++ b/CRM-Dev.Infraestructure/CRM-Dev.Infraestructure.csproj
@@ -11,4 +11,12 @@
     <ProjectReference Include="..\CRM-Dev.Core\CRM-Dev.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
