--- a/CRM-Dev.Application/CRM-Dev.Application.csproj
+++ b/CRM-Dev.Application/CRM-Dev.Application.csproj
@@ -9,6 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="MediatR" Version="12.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CRM-Dev.Core\CRM-Dev.Core.csproj" />
+    <ProjectReference Include="..\CRM-Dev.Infraestructure\CRM-Dev.Infraestructure.csproj" />
   </ItemGroup>
 
 </Project>
